--- a/views/keyInstall.jade
+++ b/views/keyInstall.jade
@@ -5,10 +5,70 @@ block content
       md-card-title-text
         span.md-headline driveNode Installation
         span.md-subhead Please upload key pairs to continous
-        form(ng-submit="",novalidate)
+        //Upload Dialog
+        div#uploadKey
+              div#App2(name="formpro.form",nv-file-drop="",uploader="uploader",filters="customFilter")
+                .row
+                  .col-md-3.col-sm-12.col-xs-12
+                    h3 Select files
+                    // Example: nv-file-select="" uploader="{Object}" options="{Object}" filters="{String}"
+                    | Multiple
+                    input.form-control(type='file', nv-file-select='', uploader='uploader', multiple)
+                    input.form-control(type='hidden',ng-model="tokenfield",name="tokenfield")
+                  .col-md-9.col-sm-12.col-xs-12(style='margin-bottom: 40px')
+                    h3 Upload queue
+                    p Queue length: {{ uploader.queue.length }}
+                    table.table.col-md-12.col-sm-12.col-xs-12
+                      thead
+                        tr
+                          th(width='50%') Name
+                          th(ng-show='uploader.isHTML5') Size
+                          th(ng-show='uploader.isHTML5') Progress
+                          th Status
+                          th Actions
+                      tbody
+                        tr(ng-repeat='item in uploader.queue')
+                          td
+                            strong {{ item.file.name }}
+                          td(ng-show='uploader.isHTML5', nowrap='') {{ item.file.size/1024/1024|number:2 }} MB
+                          td(ng-show='uploader.isHTML5')
+                            .progress(style='margin-bottom: 0;')
+                              .progress-bar(role='progressbar', ng-style="{ 'width': item.progress + '%' }")
+                          td.text-center
+                            span(ng-show='item.isSuccess')
+                              i.glyphicon.glyphicon-ok
+                            span(ng-show='item.isCancel')
+                              i.glyphicon.glyphicon-ban-circle
+                            span(ng-show='item.isError')
+                              i.glyphicon.glyphicon-remove
+                          td()
+                            button.btn.btn-success.btn-xs(type='button', ng-click='item.upload()', ng-disabled='item.isReady || item.isUploading || item.isSuccess')
+                              span.glyphicon.glyphicon-upload
+                              |  Upload
+                            button.btn.btn-warning.btn-xs(type='button', ng-click='item.cancel()', ng-disabled='!item.isUploading')
+                              span.glyphicon.glyphicon-ban-circle
+                              |  Cancel
+                            button.btn.btn-danger.btn-xs(type='button', ng-click='item.remove()')
+                              span.glyphicon.glyphicon-trash
+                              |  Remove
+                    div.col-xs-12
+                      div.col-xs-12
+                        | Queue progress:
+                        .progress(style='')
+                          .progress-bar(role='progressbar', ng-style="{ 'width': uploader.progress + '%' }")
+                      button.btn.btn-success.btn-s(type='button', ng-click='uploader.uploadAll()', ng-disabled='!uploader.getNotUploadedItems().length')
+                        span.glyphicon.glyphicon-upload
+                        |  Upload all
+                      button.btn.btn-warning.btn-s(type='button', ng-click='uploader.cancelAll()', ng-disabled='!uploader.isUploading')
+                        span.glyphicon.glyphicon-ban-circle
+                        |  Cancel all
+                      button.btn.btn-danger.btn-s(type='button', ng-click='uploader.clearQueue()', ng-disabled='!uploader.queue.length')
+                        span.glyphicon.glyphicon-trash
+                        |  Remove all
 
-          md-button.md-raised.md-warn(type="submit") Next
-          div(ng-model="msg"){{msg}}
+                    div(ng-show="success")
+                      | {{success}}
+                    div(ng-show="error") {{error}}
     md-card-actions(layout='row', layout-align='end center')  
       md-button.md-raised.md-success(type="button",ng-model="backBtn",ng-disabled="backBtnSuccess",ng-click="backDrive()") Go to drive
     
